@@ -1,0 +1,3 @@
+explain ~C()
+      ^
+7: error: destructors not supported in C
